# agentic_ai

./: .gitignore  README.md  pyproject.toml
1-pydantic/: intro.py
2-Langchain/: 1-intro.ipynb  assignment_1.ipynb
